# NeteaseCloudMusicRustApi

./: .gitignore  Cargo.toml  LICENSE  README.md  test.rest
src/: api.rs  app.rs  crypto.rs  macros.rs  main.rs  music_api.rs  request.rs  server.rs
