[package]
name = "NeteaseCloudMusicRustApi"
version = "0.2.0"
authors = ["zmant <zmant724@aliyun.com>"]
license-file = "LICENSE"
edition = "2018"
description = "Rust implementation of NeteaseCloud music API."

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
actix-http = "1.0"
actix-files = "0.2"
reqwest = { version = "0.10", features = ["json", "blocking", "cookies"] }
rand = { version = "0.7" }
base64 = "0.11"
openssl = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-channel-preview="0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"
futures = "0.3"
urlqstring = "0.3"
listenfd = "0.3"
lazy_static = "1.4"
time = "0.1.42"

