[package]
name = "RustNeteaseCloudMusicApi"
version = "0.1.0"
authors = ["zmant <zmant724@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0.0"
base64 = "0.12"
hex = "0.4"
lazy_static = "1.4"
openssl = "0.10"
rand = "0.7"
regex = "1.3.5"
reqwest = "0.10.4"
serde = "1.0"
serde_json = "1.0"
urlqstring = { path = "../urlqstring" }
