[package]
name = "RustNeteaseCloudMusicApi"
version = "0.1.0"
authors = ["zmant <zmant724@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix-web]
version = "2.0"

[dependencies.actix-rt]
version = "1.0.0"

[dependencies.base64]
version = "0.12"

[dependencies.hex]
version = "0.4"

[dependencies.lazy_static]
version = "1.4"

[dependencies.openssl]
version = "0.10"

[dependencies.percent-encoding]
version = "2.1.0"

[dependencies.rand]
version = "0.7"

[dependencies.regex]
version = "1.3.5"

[dependencies.reqwest]
version = "0.10.4"
features = [ "json" ]

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.urlqstring]
verion = "0.3.5"
